Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Naz Saltoglu : Naz Saltoglu">
+    <meta name="description" content="Naz Saltoglu : A self-explanatory place">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/unforecastedstorm">View on GitHub</a>
 
           <h1 id="project_title">Naz Saltoglu</h1>
-          <h2 id="project_tagline">Naz Saltoglu</h2>
+          <h2 id="project_tagline">A self-explanatory place</h2>
 
         </header>
     </div>
